--- a/Day01-15/04.循环结构.md
+++ b/Day01-15/04.循环结构.md
@@ -171,8 +171,9 @@ if x > y:
 # 从两个数中较的数开始做递减的循环
 for factor in range(x, 0, -1):
     if x % factor == 0 and y % factor == 0:
-        print('%d和%d的最大公约数是%d' % (x, y, factor))
-        print('%d和%d的最小公倍数是%d' % (x, y, x * y // factor))
+        print('%d和%d的最大公约数是%d' % (x, y, factor))           
+        print('%d和%d的最小公倍数是%d' % (x, y, x * y // factor)) 
+        #与最小公倍数相对应的概念是最大公约数，a，b的最大公约数记为（a，b）。a，b的最小公倍数记为[a,b]。关于最小公倍数与最大公约数，我们有这样的定理：(a,b)x[a,b]=ab(a,b均为整数)。
         break
 ```
 
