--- a/Day01-15/04.循环结构.md
+++ b/Day01-15/04.循环结构.md
@@ -214,7 +214,7 @@ Author: 骆昊
 """
 
 row = int(input('请输入行数: '))
-for i in range(row):
+for i in range(row):        # range(5)等价于range(0,5),也就是从0开始。range函数是左包右不包。
     for _ in range(i + 1):
         print('*', end='')
     print()
